styles/shared.css
body {
  text-size-adjust: 100%;
  text-rendering: optimizeSpeed;
  min-height: 100vh;
  font-family: 'Syncopate', sans-serif;
  font-weight: 400;
  scroll-behavior: smooth;
  overscroll-behavior: none;
  overflow: hidden;
}

.icon {
  height: 16px;
  width: 16px;
  margin-right: 10px;
}

.content-width {
  width: 100vw;
  max-width: 100vw;
}

.center {
  display: flex;
  align-items: center;
  justify-content: center;
}
/*
.anim {
  overflow: hidden;
} */

.nav {
  position: fixed;
  top: 0;
  left: 0;
  width: calc(100% - 9px);
  background: rgba(255, 255, 255, 0.1) !important;
  backdrop-filter: blur(6px);
  z-index: 900;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transform: translateX(5px);
}

.row {
  display: flex;
  flex-direction: row;
}

.column {
  display: flex;
  flex-direction: column;
}

.parent {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(3, 1fr);
  grid-column-gap: 0px;
  grid-row-gap: 0px;
}

/* Gradient in Hex */
.hero-gradient {
  background: linear-gradient(
    to right,
    #b6b6c2 0%,
    28.270676732063293%,
    #714b5a 56.54135346412659%,
    78.2706767320633%,
    #53515c 100%
  );
}

.theme-gradient-rgba {
  background: linear-gradient(
    to right,
    rgba(182, 182, 194, 1) 0%,
    28.270676732063293%,
    rgba(113, 75, 90, 1) 56.54135346412659%,
    78.2706767320633%,
    rgba(83, 81, 92, 1) 100%
  );
}

.theme1 {
  background: #cecdc9;
}
.theme2 {
  background: #baaf9b;
}
.theme3 {
  background: #ded7cd;
}
.theme4 {
  background: #dbdad8;
}
.theme5 {
  background: #bab7b0;
}
.theme6 {
  background: #c4c4c2;
}
.theme7 {
  background: #b7bbaa;
}
.theme8 {
  background: #949782;
}
.theme9 {
  background: #9c9076;
}
.theme10 {
  background: #948e76;
}
.theme11 {
  background: #72655f;
}
.theme12 {
  background: #958866;
}
.theme13 {
  background: #a2985d;
}
.theme14 {
  background: #a6987b;
}

.theme-gradient {
  background: linear-gradient(
    to right,
    #ba7339 0%,
    28.270676732063293%,
    #8f6d5d 56.54135346412659%,
    78.2706767320633%,
    #ba7339 100%
  );
}

